--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,6 +43,7 @@ android {
 }
 
 dependencies {
-  implementation("com.tryhelium.paywall:core:0.1.12")
+  implementation("com.tryhelium.paywall:core:0.1.13")
+  implementation("com.google.code.gson:gson:2.10.1")
   implementation("com.android.billingclient:billing:8.0.0")
 }
