--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -74,6 +74,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
+      id-token: write
       contents: write # so can create release and create tag
     needs: [check-version, get-current-version, test]
     if: always() && (needs.check-version.outputs.version-changed == 'true' || github.event_name == 'workflow_dispatch')
