add read permission to new publish job

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -106,6 +106,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
+      contents: read
     needs: [check-version, get-current-version, test, release]
     if: always() && (needs.check-version.outputs.version-changed == 'true' || github.event_name == 'workflow_dispatch')
     steps:
