--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'expo.modules.paywallsdk.example'
+    namespace 'com.tryhelium.android'
     defaultConfig {
-        applicationId 'expo.modules.paywallsdk.example'
+        applicationId 'com.tryhelium.android'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
